# curso_ros

./: README.md
seccion2/custom_pub_sub/: CMakeLists.txt  package.xml
seccion2/custom_pub_sub/msg/: Memory.msg
seccion2/custom_pub_sub/scripts/: py_publisher.py  py_subscriber.py
seccion2/custom_pub_sub/src/: publisher.cpp  subscriber.cpp
seccion2/simple_pub_sub/: CMakeLists.txt  package.xml
seccion2/simple_pub_sub/scripts/: py_publisher.py  py_subscriber.py
seccion2/simple_pub_sub/src/: publisher.cpp  subscriber.cpp
seccion3/cv_cam/: CMakeLists.txt  package.xml
seccion3/cv_cam/launch/: args1.launch  args2.launch  args3.launch  cpp_camera_driver.launch  cpp_camera_driver_it.launch  py_camera_driver.launch
seccion3/cv_cam/scripts/: py_camera_driver.py  py_camera_driver_ros.py  py_camera_driver_ros_args.py  py_camera_driver_ros_params.py  py_tracker.py
seccion3/cv_cam/src/: camera_driver.cpp  camera_driver_ros.cpp  camera_driver_ros_args.cpp  camera_driver_ros_params.cpp  img_transport_camera_driver.cpp  tracker.cpp
seccion4/text_to_speech/: CMakeLists.txt  package.xml
seccion4/text_to_speech/scripts/: speech_client.py  speech_server.py
seccion4/text_to_speech/src/: speaker_node.cpp  test_node.cpp
seccion4/text_to_speech/srv/: SaySomething.srv
seccion5/speech_recognition/: CMakeLists.txt  package.xml
seccion5/speech_recognition/launch/: applications_recognizer.launch  custom_recognizer.launch  media_recognizer.launch  recognizer.launch  spanish_recognizer.launch
seccion5/speech_recognition/misc/: TAR6972.tgz  applications.txt  corpus.txt  media.txt
seccion5/speech_recognition/misc/TAR6972/: 6972.dic  6972.lm  6972.log_pronounce  6972.sent  6972.vocab
seccion5/speech_recognition/misc/applications/: applications.dic  applications.lm  applications.log_pronounce  applications.sent  applications.vocab
seccion5/speech_recognition/misc/cmusphinx-es-5.2/etc/: salida.txt
seccion5/speech_recognition/misc/media/: media.dic  media.lm  media.log_pronounce  media.sent  media.vocab
seccion5/speech_recognition/scripts/: applications.py  pocket.py
seccion5/speech_recognition/src/: media_command.cpp
seccion6/turtlebot_utils/: CMakeLists.txt  package.xml
seccion6/turtlebot_utils/action/: GoTo.action
seccion6/turtlebot_utils/scripts/: bag_iterator.py  go_to.py  go_to2.py  turtle_action_client.py  turtle_action_server.py
seccion6/turtlebot_utils/src/: iterator.cpp
